fix FB network element name in popup